# Log-Analyzer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  todo.txt
inc/: BinaryReader.h  DsLogReader.h
res/: 2018_04_25 19_43_46 Wed.dslog  ConvertedFromTool2018_04_25_19_43_46.csv
res/TestFiles/: binary_dump
src/: BinaryReader.cpp  DsLogReader.cpp  main.cpp
